# TheStudio

./: .claudeignore  .dockerignore  .gitattributes  .gitignore  .mcp.json  .ralphrc  .tapps-mcp.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.local.md.example  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  TECH_STACK.md  docker-compose.dev.yml  docker-entrypoint.sh  pyproject.toml
.claude/: settings.json
.claude/agents/: compass-navigator.md  forge-evidence.md  helm-planner.md  meridian-reviewer.md  ralph-tester.md  ralph.md  saga-epic-creator.md  scout-tester.md  sentinel-gatekeeper.md  tapps-researcher.md  tapps-review-fixer.md  tapps-reviewer.md  tapps-validator.md
.claude/hooks/: protect-files.sh  tapps-memory-auto-capture.ps1  tapps-memory-capture.ps1  tapps-post-edit.ps1  tapps-post-edit.sh  tapps-post-report.ps1  tapps-post-validate.ps1  tapps-pre-compact.ps1  tapps-pre-compact.sh  tapps-session-compact.ps1  tapps-session-compact.sh  tapps-session-start.ps1  tapps-session-start.sh  tapps-stop.ps1  tapps-stop.sh  tapps-subagent-start.ps1  tapps-subagent-start.sh  tapps-subagent-stop.ps1  tapps-subagent-stop.sh  tapps-task-completed.ps1
.claude/rules/: coding-standards.md  domain-objects.md  personas.md  pipeline-stages.md  python-quality.md  tapps-pipeline.md  trust-tiers.md  verification-qa.md
.cursor/: BUGBOT.md  MCP_SETUP_INSTRUCTIONS.md  hooks.json  mcp.json
.cursor/agents/: tapps-researcher.md  tapps-review-fixer.md  tapps-reviewer.md  tapps-validator.md
.cursor/hooks/: tapps-after-edit.ps1  tapps-after-edit.sh  tapps-before-mcp.ps1  tapps-before-mcp.sh
.cursor/rules/: frontend-style-source-of-truth.mdc  persona-helm.mdc  persona-meridian.mdc  persona-saga.mdc  tapps-expert-consultation.mdc  tapps-pipeline.md  tapps-pipeline.mdc  tapps-python-quality.mdc
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/agents/: tapps-quality.md  tapps-researcher.md
.github/instructions/: quality.instructions.md  security.instructions.md  testing.instructions.md
.github/workflows/: ci.yml  frontend-ci.yml  lint-agents.yml  tapps-quality.yml
.ralph/: .audit.jsonl  .circuit_breaker_events  .files_modified_this_loop  .invocation_latencies  AGENT.md  PROMPT.md  fix_plan.md
.ralph/hooks/: validate-command.sh
.tapps-mcp/: experts.yaml  tool-versions.json
.tapps-mcp/dashboard/: dashboard.html
.tapps-mcp/metrics/: tool_calls_2026-03-05.jsonl
.tapps-mcp/sessions/: checklist_calls.jsonl
docker/agent/: Dockerfile
docs/: API_REFERENCE.md  CLAUDE-BEST-PRACTICES-AUDIT.md  FAILURE_CATALOG.md  FEATURE-FLAGS.md  GITHUB_SETUP_GUIDE.md  HANDOFF-EPIC29-SPRINT2.md  KICKOFF-PLAN.md  LESSONS_LEARNED.md  ONBOARDING.md  PAGES.md  PHASE4_EXIT_REPORT.md  SESSION-PLANNING.md  TAPPS-MCP-BUG-CURSOR-HOOKS-WINDOWS.md  TAPPS_HANDOFF.md  TAPPS_MCP_FRONTEND_EXPERTS_BRIEF.md  TAPPS_RUNLOG.md  TAPPS_WORKFLOW.md  URLs.md  WSL.md  agent-catalog.md  agent-maturity-log.md  architecture-documentation-guide.md  architecture-report.html  architecture-vs-implementation-mapping.md  cloudflare-tunnel-setup.md  deployment.md  epic-12-review-feedback.md  epic-15-session-plan.md  epic-9-mcp-review.md  ingress.md  onboarding-new-repo.md  per-repo-trust-tier-rules.md  pipeline-latency-baseline.md  production-test-rig-contract.md  ralph-feedback.md  ralph-sdk-230-upgrade-plan.md  ralph-sdk-upgrade-evaluation.md  ralph-setup.md  ralph-upstream-issue-body.md  ralph-upstream-issues.md
docs/architecture/: RFC-001-ralph-sdk-integration.md  agent-container-isolation.md  complexity-index-v1.md  outcome-ingestor-hardening.md  trust-dynamics.md
docs/design/: 00-PIPELINE-UI-VISION.md  01-PLANNING-EXPERIENCE.md  02-PIPELINE-VISUALIZATION.md  03-INTERACTIVE-CONTROLS.md  04-GITHUB-INTEGRATION-ANALYTICS.md  05-TECHNOLOGY-ARCHITECTURE.md  06-BACKEND-REQUIREMENTS.md  07-THESTUDIO-UI-UX-STYLE-GUIDE.md
docs/epics/: EPIC-4-SPRINT-1-PROGRESS.md  EPIC-4-SPRINT-2-PROGRESS.md  EPIC-5-SPRINT-1-PROGRESS.md  EPIC-6-SPRINT-1-PROGRESS.md  EPIC-7-SPRINT-1-PROGRESS.md  EPIC-7-SPRINT-2-PROGRESS.md  EPIC-8-SPRINT-1-PROGRESS.md  EPIC-8-SPRINT-2-PROGRESS.md  EPIC-STATUS-TRACKER.md  MERIDIAN-REVIEW-EPIC-0.md  MERIDIAN-REVIEW-EPIC-2.md  MERIDIAN-REVIEW-EPIC-51.md  MERIDIAN-REVIEW-PIPELINE-UI.md  epic-0-foundation.md  epic-1-full-flow-experts.md  epic-10-docker-test-hardening.md  (+97 more)
frontend/: package-lock.json  package.json  vite.config.ts
infra/: .env.example  Caddyfile  Caddyfile.http  Dockerfile.agent  backup-db.sh  check-env.sh  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint-caddy.sh  init-temporal-db.sql  restore-db.sh  setup-prod-env.sh  temporal-schema-setup.sh  verify-restart.sh  wait-for-stack.sh
scripts/: agent-catalog.py  convert-agents.py  convert-agents.sh  lint-agents.sh  run-p0-tests.sh  setup-wsl-venv.sh  wait_for_stack.py  wsl-setup-ralph-home.sh
src/: app.py  settings.py
src/admin/: audit.py  (+21 more)
tests/: conftest.py
thestudio-production-test-rig/: .env.example  .gitignore  README.md  pyproject.toml
thestudio-production-test-rig/.github/workflows/: production-smoke.yml
thestudio-production-test-rig/tests/: __init__.py  conftest.py  test_admin_api.py  test_health.py  test_pipeline_smoke.py  test_poll_intake.py  test_production_smoke.py  test_webhook.py
thestudioarc/: 00-overview.md  01-expert-bench-architecture.md  02-expert-taxonomy.md  03-context-manager.md  04-expert-recruiter.md  05-expert-router.md  06-reputation-engine.md  07-assembler.md  08-agent-roles.md  09-service-context-packs.md  10-expert-library.md  11-intent-layer.md  12-outcome-ingestor.md  13-verification-gate.md  14-qa-quality-layer.md  15-system-runtime-flow.md  20-coding-standards.md  21-project-structure.md  22-architecture-guardrails.md  23-admin-control-ui.md  24-openclaw-sidecar.md  25-tool-hub-mcp-toolkit.md  26-model-runtime-and-routing.md  AGENTS.md  EVALS.md  MERIDIAN-ROADMAP-AGGRESSIVE.md  PHASE1-NOTES.md  POLICIES.md  README.md  SOUL.md  TOOLS.md
(+1251 files in other folders)
