[project]
name = "thestudio"
version = "0.1.0"
description = "AI-augmented software delivery platform"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "temporalio>=1.9.0",
    "nats-py>=2.9.0",
    "cryptography>=44.0.0",
    "opentelemetry-api>=1.29.0",
    "opentelemetry-sdk>=1.29.0",
    "opentelemetry-exporter-otlp>=1.29.0",
    "opentelemetry-instrumentation-fastapi>=0.50b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.50b0",
    "opentelemetry-instrumentation-httpx>=0.50b0",
    "httpx>=0.28.0",
    "claude-agent-sdk>=0.1.40",
    # Ralph SDK — autonomous development loop integration (Epic 43)
    # Dev path: installed from local clone. CI form (commented out until CI vendor path is set up):
    # "ralph-sdk @ file:///vendor/ralph-sdk",
    "ralph-sdk @ file:///C:/cursor/ralph/ralph-claude-code/sdk",
    "anyio>=4.0.0",
    "jinja2>=3.1.0",
    "slowapi>=0.1.9",
    "scalar-fastapi>=1.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.14.0",
    "pre-commit>=4.0.0",
    "pip-audit>=2.7.0",
    "respx>=0.22.0",
    "bandit>=1.8.0",
    "playwright>=1.49.0",
    "pytest-playwright>=0.6.0",
    "pytest-order>=1.3.0",
    "aiosqlite>=0.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "PT", "RUF"]
ignore = ["S104", "B008", "E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S108", "S105", "S106", "S603", "S607"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["ralph_sdk", "ralph_sdk.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
asyncio_default_test_loop_scope = "function"
testpaths = ["tests"]
addopts = "-m 'not integration and not docker and not p0'"
markers = [
    "integration: marks tests requiring external services (PostgreSQL, Temporal, etc.)",
    "docker: marks tests requiring the full Docker Compose stack (opt-in locally, mandatory in CI)",
    "p0: marks deployment-mode P0 tests that exercise the running Docker stack through Caddy",
    "playwright: marks browser tests requiring Playwright and a running app (e.g. Docker stack)",
    "order: execution order for tests (pytest-order; used in Docker lifecycle tests)",
]
filterwarnings = [
    # Unraisable exceptions during async teardown (pytest-asyncio + Python 3.13)
    "ignore::pytest.PytestUnraisableExceptionWarning",
    # Async/event-loop RuntimeWarnings (avoid cascading failures)
    "ignore:coroutine .* was never awaited:RuntimeWarning",
    "ignore:.*was never awaited:RuntimeWarning",
    "ignore:.*event loop.*:RuntimeWarning",
    "ignore:.*shutdown_asyncgens.*:RuntimeWarning",
    "ignore:.*Ensure that your tests don't close the event loop:RuntimeWarning",
    "ignore:coroutine 'AsyncMockMixin._execute_mock_call' was never awaited:RuntimeWarning",
    # Optional: treat other RuntimeWarnings as errors (disabled to avoid async teardown noise)
    # "error::RuntimeWarning",
]
